--- a/backend/apps/warehouse/templates/income/income_list.html
+++ b/backend/apps/warehouse/templates/income/income_list.html
@@ -25,56 +25,7 @@
     <div class="wrapper">
 
         <!-- Navbar -->
-        <nav class="main-header navbar navbar-expand-md navbar-light navbar-white">
-            <div class="container">
-                <a href="{% url "warehouse_v2:mainscreen" %}" class="navbar-brand">
-                    <img src="{% static 'adminlte3_assets/dist/img/hayat_logo.png' %}" alt="AdminLTE Logo"
-                         class="brand-image img" style="opacity: .8">
-                    <span class="brand-text font-weight-light"></span>
-                </a>
-
-                <button class="navbar-toggler order-1" type="button" data-toggle="collapse"
-                        data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false"
-                        aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-
-                <div class="collapse navbar-collapse order-3" id="navbarCollapse">
-                    <!-- Left navbar links -->
-                    <ul class="navbar-nav">
-
-                        <li class="nav-item">
-                            <a href="{% url 'warehouse_v2:mainscreen' %}" class="nav-link">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">Contact</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a id="dropdownSubMenu1" href="#" data-toggle="dropdown" aria-haspopup="true"
-                               aria-expanded="false" class="nav-link dropdown-toggle">Dropdown</a>
-                            <ul aria-labelledby="dropdownSubMenu1" class="dropdown-menu border-0 shadow">
-                                <li><a href="#" class="dropdown-item">Some action </a></li>
-                                <li><a href="#" class="dropdown-item">Some other action</a></li>
-                                <li>
-                                    <button type="button" class="dropdown-item" data-toggle="modal"
-                                            data-target="#modal-danger">
-                                        Log out
-                                    </button>
-                                </li>
-
-                                <li class="dropdown-divider"></li>
-
-                                <!-- Level two dropdown-->
-                                <!-- End Level two -->
-                            </ul>
-                        </li>
-                    </ul>
-
-                    <!-- SEARCH FORM -->
-                </div>
-                <!-- Right navbar links -->
-            </div>
-        </nav>
+        {% include 'snippets/navbar.html' %}
         <!-- /.navbar -->
 
         <div class="content-wrapper">
@@ -195,15 +146,7 @@
         <!-- /.control-sidebar -->
 
         <!-- Main Footer -->
-        <footer class="main-footer">
-            <!-- To the right -->
-            <div class="float-right d-none d-sm-inline">
-                Keep your health!
-            </div>
-            <!-- Default to the left -->
-            <strong>Copyright &copy; 2014-2024 <a href="https://adminlte.io">Hayat Medical Centre</a>.</strong> All
-            rights reserved.
-        </footer>
+        {% include 'snippets/footer.html' %}
     </div>
     <!-- ./wrapper -->
 
